--- a/thecity.html
+++ b/thecity.html
@@ -2,17 +2,30 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="mystyle.css">
+	<title>The City</title>
+	<style type="text/css">
+
+	</style>
 </head>
+
 <body>
-	<ul>
-		<li><a href="index.html">HOME</a></li>
-		<li><a href="donggou.html">Dong Gou</a></li>
-		<li><a href="thecity.html">The City</a></li>
-		<li><a href="environment.html">Environment</a></li>
-		<li><a href="thepower.html">The Power</a></li>
-		<li><a href="theculture.html">The Culture</a></li>
-	</ul>
+	<header>		
+	<img class="icon" src="images/donggou_icon1.png">
+</header>
+<nav role='navigation' style="text-decoration: none;">
+	<a href="index.html">Home</a>
+	<a href="donggou.html">Dong gou</a>
+	<a href="thecity.html">The City</a>
+	<a href="environment.html">Enviroment</a>
+	<a href="thepower.html">The power</a>
+	<a href="theculture.html">The culture</a>
+</nav>
+
+	<main>
 	<p>
 		Where he live call C-Zodiac Planet. There is no big difference between this planet and the planet where real humans live. The only difference is that C-Zodiac people born here will have the characteristics of Chinese zodiac animals depends of the different birth years.
 	</p>
+	</main>
+	<img style="display:block; margin:0 auto;" src="images/newyorkcity.jpg">
+	<cite>"New York City" by Andos_pics is licensed under CC BY-NC-SA 2.0</cite>
 </body>
