--- a/environment.html
+++ b/environment.html
@@ -2,15 +2,22 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="mystyle.css">
+	<title>Environment</title>
 </head>
 <body>
+	<header>		
+	<img class="icon" src="images/donggou_icon1.png">
+</header>
 	<ul>
-		<li><a href="index.html">HOME</a></li>
-		<li><a href="donggou.html">Dong Gou</a></li>
-		<li><a href="thecity.html">The City</a></li>
-		<li><a href="environment.html">Environment</a></li>
-		<li><a href="thepower.html">The Power</a></li>
-		<li><a href="theculture.html">The Culture</a></li>
-	</ul>
+<nav role='navigation'>
+	<a href="index.html">Home</a>
+	<a href="donggou.html">Dong gou</a>
+	<a href="thecity.html">The City</a>
+	<a href="environment.html">Enviroment</a>
+	<a href="thepower.html">The power</a>
+	<a href="theculture.html">The culture</a>
+</nav>
 	<p>My character’s living in a crowed city.</p>
+	<img src="images/citycorner.jpg"style="display:block; margin:0 auto;">
+	<cite>"New York City" by Andos_pics is licensed under CC BY-NC-SA 2.0</cite>
 </body>
