--- a/theculture.html
+++ b/theculture.html
@@ -2,16 +2,25 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="mystyle.css">
+	<title>The Culture</title>
 </head>
 <body>
-	<ul>
-		<li><a href="index.html">HOME</a></li>
-		<li><a href="donggou.html">Dong Gou</a></li>
-		<li><a href="thecity.html">The City</a></li>
-		<li><a href="environment.html">Environment</a></li>
-		<li><a href="thepower.html">The Power</a></li>
-		<li><a href="theculture.html">The Culture</a></li>
-	</ul>
+	<header>		
+	<img class="icon" src="images/donggou_icon1.png">
+</header>
+<nav role='navigation'>
+	<a href="index.html">Home</a>
+	<a href="donggou.html">Dong gou</a>
+	<a href="thecity.html">The City</a>
+	<a href="environment.html">Enviroment</a>
+	<a href="thepower.html">The power</a>
+	<a href="theculture.html">The culture</a>
+</nav>
+
 	<p>
-		Super memory
+		Creatures on this planet will have different abilities and traits because of their birth year. Some zodiac signs are mutually restrained and some are opposite.
 	</p>
+
+	<img style="display:block; margin:0 auto;" src="images/zodiac.jpg">
+	<cite>"Chinese Zodiac Mosaic" by mag3737 is licensed under CC BY-NC-SA 2.0</cite>
+</body>
