--- a/donggou.html
+++ b/donggou.html
@@ -23,6 +23,6 @@
 	<a href="thepower.html">The power</a>
 	<a href="theculture.html">The culture</a>
 </nav>
-	<img src="images/a_drink.jpg"style="display:block; margin:0 auto;">
+	<img src="images/a_drink.gif"style="display:block; margin:0 auto;">
 	<p>My character’s name is Donggou (Dong go) He has black curly hair. Dark green pupils. He usually only likes to wear simple short sleeves, but because he works in a bar he has to wear formal. His Chinese zodiac is a rat, so he has a pair of big ears and a long tail. </p>
 </body>
