--- a/thepower.html
+++ b/thepower.html
@@ -2,6 +2,10 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="mystyle.css">
+	<script src="p5.js"></script>
+    <script src="p5.sound.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="utf-8">
 	<title>The Power</title>
 </head>
 <body>
