--- a/thepower.html
+++ b/thepower.html
@@ -21,7 +21,7 @@
 	<a href="thepower.html">The power</a>
 	<a href="theculture.html">The culture</a>
 	<nan/>
-
+  <script src="sketch.js"></script>
 
 	<p>Donggou is a quiet boy, As a bartender quiet feature will not help him make money. He has a good memory like rat, he alway quietly observe what happens around him and remember. He loves talk shows, So everything that happened in his memory may become his talk show on stage during his day off. </p>
 	<img style="display:block; margin:0 auto;"src="images/talkshow.jpg">
