--- a/environment.html
+++ b/environment.html
@@ -19,7 +19,7 @@
 </nav>
 	<p>My character’s living in a crowed city.</p>
 		
-	<img src="Donggou_poster.png"style="display:block; margin:0 auto;">
+	<img src="Donggou_p.jpg"style="display:block; margin:0 auto;">
 	<img src="images/citycorner.jpg"style="display:block; margin:0 auto;">
 	<cite>"New York City" by Andos_pics is licensed under CC BY-NC-SA 2.0</cite>
 </body>
